# TTM

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  discord_bot_preview.md  discord_ui_implementation.md  main.py  pyproject.toml
.cursor/rules/: ttm-rule.mdc
.github/workflows/: auto_migration.yml  docker_build.yaml  main.yml  unit_test.yml
alembic/: README.md  env.py
alembic/versions/: 9a5955e41180_create_user_model_for_migration_test.py
app/: container.py  main.py
app/adapters/internal/: __init__.py  dca_scheduler.py  discord_command.py
app/adapters/internal/api/routes/: account.py  order.py  ticker.py
app/adapters/internal/background/: infinite_buying_scheduler.py  trading_scheduler.py
app/adapters/internal/discord/: __init__.py  command_adapter.py
app/adapters/internal/websocket/: __init__.py  discord_bot.py  exception_middleware.py  image_generator.py
app/adapters/primary/api/routes/: account.py  ticker.py
app/adapters/secondary/adapter/: upbit_adapter.py
app/adapters/secondary/discord/: __init__.py  adapter.py  bot_commands.py  models.py
app/adapters/secondary/upbit/: adapter.py  auth.py  client.py
app/application/dto/: __init__.py  account_dto.py  dca_config_dto.py  order_dto.py  ticker_dto.py  trading_dto.py
app/application/usecase/: __init__.py  account_usecase.py  cache_usecase.py  dca_stats_usecase.py  dca_usecase.py  discord_ui_usecase.py  infinite_buying_usecase.py  order_usecase.py  ticker_usecase.py  trading_usecase.py
app/domain/: constants.py  enums.py  exceptions.py  types.py
app/domain/models/: __init__.py  account.py  dca.py  enums.py  infinite_buying.py  order.py  status.py  ticker.py  trading.py  user.py
app/domain/repositories/: account_repository.py  cache_repository.py  dca_repository.py  infinite_buying_repository.py  notification.py  order_repository.py  ticker_repository.py
app/domain/services/: __init__.py  dca_service.py  infinite_buying_service.py  simple_trading_algorithm.py  smart_dca_service.py  technical_indicators.py  trade_service.py  trading_algorithm_service.py
app/domain/trade_algorithms/: __init__.py  base.py  infinite_buying.py  simple.py
app/infrastructure/: container.py
app/presentation/api/: main.py
app/presentation/api/routes/: account.py
app/usecase/usecase/: get_account_balance_usecase.py  get_ticker_price_usecase.py  order_usecase.py
common/: database.py  logging.py
common/discord/: bot.py  handlers.py  middleware.py  models.py  ui.py
common/utils/: __init__.py  timezone.py
docker/: Dockerfile  docker-compose-local.yml  docker-compose.yml
docs/: cache_usage.md
resources/discord/: bot.py  commands.py  handlers.py  middleware.py  ui.py
scripts/: test_discord_bot.py  test_font_loading.py
test/: conftest.py
test/alembic/: test_migrations.py
test/app/: test_get_balance_integration.py
test/app/adapters/internal/: test_discord_command.py
test/app/adapters/internal/background/: test_trading_scheduler.py
test/app/application/usecase/: test_account_usecase.py  test_dca_usecase.py  test_discord_ui_usecase.py  test_order_usecase.py
test/app/core/domain/: test_infinite_buying_algorithm.py
test/app/core/domain/entity/: test_account.py
test/app/core/usecase/: test_get_account_balance_usecase.py  test_order_usecase.py  test_trading_usecase.py
test/app/domain/models/: test_account.py  test_dca.py
test/app/domain/services/: test_dca_service.py  test_infinite_buying_service.py
test/app/domain/trade_algorithms/: test_infinite_buying_algorithm.py
