[tool.poetry]
name = "ttm"
version = "0.1.0"
description = ""
authors = ["CasselKim <seongr39@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
redis = "^5.0.1"
requests = "^2.31.0"
uvicorn = "^0.23.2"
setuptools = "^68.2.2"
mysqlclient = "^2.2.0"
python-dotenv = "^1.0.0"
httpx = "^0.28.1"
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^8.3.5"
mypy = "^1.6.1"
black = "^23.10.1"
pytest-bdd = "^7.0.0"
freezegun = "^1.2.2"
coverage = "^7.3.2"
sqlalchemy2-stubs = "^0.0.2a36"
typer = "^0.9.0"
types-redis = "^4.6.0.9"
uvicorn = "0.23.2"


[tool.poetry.group.pytest-bdd.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
