[tool.poetry]
name = "ttm"
version = "0.1.0"
description = ""
authors = ["CasselKim <seongr39@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
valkey-glide = "^1.0.0"
requests = "^2.31.0"
uvicorn = "^0.23.2"
setuptools = "^68.2.2"
mysqlclient = "^2.2.0"
python-dotenv = "^1.0.0"
httpx = "^0.28.1"
pyjwt = "^2.10.1"
pytest-asyncio = "^0.26.0"
dependency-injector = "^4.46.0"
discord-py = "^2.5.2"
boto3 = "^1.35.0"
botocore = "^1.35.0"
pydantic = "^2.9.0"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^8.3.5"
mypy = "^1.15.0"
ruff = "^0.11.11"
pytest-bdd = "^7.0.0"
freezegun = "^1.2.2"
coverage = "^7.3.2"
sqlalchemy2-stubs = "^0.0.2a36"
typer = "^0.9.0"

types-requests = "^2.32.0"
types-setuptools = "^79.0.0"
uvicorn = "0.23.2"
types-pillow = "^10.2.0.20240822"


[tool.poetry.group.pytest-bdd.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "alembic/versions/",
    "test/",
    "scripts/",
    ".venv/",
    "__pycache__/",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces around the equals sign
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["app", "common"]
force-single-line = false
force-sort-within-sections = false
split-on-trailing-comma = true

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["unreachable"]
exclude = [
    "^test/.*",
    "^scripts/.*",
    "^alembic/versions/.*",
]
